# hash-circuits

./: .gitignore  LICENSE  README.md  hash-circuits.cabal
circuits/blake2/: README.md  blake2_common.circom  blake2b.circom  blake2s.circom
circuits/griffin/: griffin_perm.circom  griffin_tests.circom
circuits/keccak/: README  README.md  keccak-p.circom  keccak_bits.circom  keccak_bytes.circom  sha3_bits.circom  sha3_bytes.circom  sponge.circom
circuits/mimc/: README.md  mimc-feistel-2p-p.circom  mimc-p-p.circom  mimc-roundconst.circom  mimc-roundfun.circom  mimc-stream-cipher.circom  mimc-test.circom
circuits/poseidon2/: README.md  poseidon2_hash.circom  poseidon2_merkle.circom  poseidon2_perm.circom  poseidon2_sponge.circom  poseidon2_tests.circom
circuits/sha2/: sha2_common.circom
circuits/sha2/sha256/: README.md  sha256_compress.circom  sha256_hash_bits.circom  sha256_hash_bytes.circom  sha256_hash_chunk.circom  sha256_hash_pair.circom
circuits/sha2/sha384/: sha384_hash_bits.circom
circuits/sha2/sha512/: sha512_compress.circom  sha512_hash_bytes.circom  sha512_hash_chunk.circom
circuits/sha256/: README.md  sha256_compress.circom  sha256_hash_bits.circom  sha256_hash_bytes.circom  sha256_hash_chunk.circom  sha256_hash_pair.circom  sha256_rounds_bits.circom  sha256_rounds_words.circom  sha256_schedule_bits.circom  sha256_schedule_words.circom  sha_common.circom  sha_compress.circom  sha_hash_bits.circom  sha_hash_bytes.circom  sha_hash_chunk.circom  sha_hash_pair.circom  sha_rounds_bits.circom  sha_rounds_words.circom  sha_schedule_bits.circom  sha_schedule_words.circom
circuits/sha512/: README.md  sha512_common.circom  sha512_compress.circom  sha512_hash_bits.circom  sha512_hash_bytes.circom  sha512_hash_chunk.circom  sha512_padding.circom  sha512_rounds.circom  sha512_schedule.circom
src/: Main.hs  README.md
src/Ref/: Common.hs  README.md
src/Ref/Blake2/: BLAKE2b.hs  BLAKE2s.hs
src/Ref/Griffin/: Permutation.hs
src/Ref/Keccak/: Perm.hs
src/Ref/MiMC/: MiMC.hs  RoundConst.hs
src/Ref/Poseidon2/: BN256.hs  Example.hs  Merkle.hs  Permutation.hs  PrimeField.hs  RoundConsts.hs  State.hs
src/Ref/Poseidon2/Naive/: BN256.hs  Example.hs  Merkle.hs  Permutation.hs  PrimeField.hs  RoundConsts.hs
src/Ref/Poseidon2/Zikkurat/: InvPerm.hs  Merkle.hs  Permutation.hs  RoundConsts.hs  Sponge.hs
src/Ref/SHA2/: SHA256.hs
src/Ref/SHA256/: SHA256.hs
src/Test/: Misc.hs  Runner.hs
src/Test/Hash/: Blake2.hs  Griffin.hs  Keccak.hs  MiMC.hs  Poseidon2.hs  SHA2.hs
src/TestVectors/: README.md
src/TestVectors/Keccak/: Vectors.hs
src/TestVectors/SHA2/: Vectors.hs
src/Vectors/: Blake2.hs  Keccak.hs  SHA2.hs
